K8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextcloud2amberscript
spec:
  selector:
    app: nextcloud2amberscript
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
