K8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nextcloud2amberscript
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
spec:
  ingressClassName: nginx
  rules:
    - host: mmz-chicoree.test.uni-jena.de
      http:
        paths:
          - backend:
              service:
                name: nextcloud2amberscript
                port:
                  number: 80
            path: /
            pathType: Prefix
